--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "tailwindcss": "^0.6.5",
+        "vue": "^2.5.17",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
