--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "browser-sync": "^2.24.6",
+        "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
+        "less": "^3.8.1",
+        "less-loader": "^4.1.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "tailwindcss": "^0.6.5",
