--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@shopify/draggable": "^1.0.0-beta.7",
         "axios": "^0.18",
         "browser-sync": "^2.24.6",
         "browser-sync-webpack-plugin": "2.0.1",
@@ -23,5 +24,8 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
+    },
+    "dependencies": {
+        "moment": "^2.22.2"
     }
 }
