--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
         "browser-sync": "^2.24.6",
         "browser-sync-webpack-plugin": "2.0.1",
         "cross-env": "^5.1",
+        "install": "^0.12.1",
         "laravel-mix": "^2.0",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
         "lodash": "^4.17.5",
+        "npm": "^6.4.0",
         "popper.js": "^1.12",
+        "showdown": "^1.8.6",
         "tailwindcss": "^0.6.5",
+        "trix": "^0.12.0",
         "vue": "^2.5.17",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
