--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "lodash": "^4.17.5",
         "npm": "^6.4.0",
         "popper.js": "^1.12",
+        "portal-vue": "^1.3.0",
         "showdown": "^1.8.6",
         "tailwindcss": "^0.6.5",
         "trix": "^0.12.0",
