--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
+        "laravel/horizon": "^1.3",
         "laravel/tinker": "^1.0",
         "spatie/laravel-html": "^2.19",
         "spatie/laravel-medialibrary": "^7.0.0"
