--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vuex": "^3.0.1"
     },
     "dependencies": {
-        "moment": "^2.22.2"
+        "moment": "^2.22.2",
+        "vue-color": "^2.6.0"
     }
 }
