--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "popper.js": "^1.12",
         "portal-vue": "^1.3.0",
         "showdown": "^1.8.6",
+        "speakingurl": "^14.0.1",
         "tailwindcss": "^0.6.5",
         "trix": "^0.12.0",
         "vue": "^2.5.17",
