--- a/composer.json
+++ b/composer.json
@@ -12,22 +12,22 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
-        "laravel/horizon": "^1.3",
         "laravel/tinker": "^1.0",
         "spatie/laravel-html": "^2.19",
         "spatie/laravel-medialibrary": "^7.0.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master",
         "barryvdh/laravel-debugbar": "^3.1",
         "barryvdh/laravel-ide-helper": "2.5.x-dev",
+        "doctrine/dbal": "~2.3",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/dusk": "^4.0",
         "laravel/homestead": "^7.14",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0",
-        "doctrine/dbal": "~2.3"
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "classmap": [
